Home layout with layouts

--- a/pumas-neocities-org/index.html
+++ b/pumas-neocities-org/index.html
@@ -6,12 +6,23 @@
     <title>Pumas</title>
     <link rel="stylesheet" href="Styles/style.css">
 </head>
-<header>Welcome to My Website!</header>
+<header>You think you know me..</header>
 <body>
-    <ul>
-        <li><a href="about-me.html">About me</a></li>
-        <li><a href="interests.html">Interests</a></li>
-        <li><a href="projects.html">Projects</a></li>
-    </ul>
+    <div id="content">
+        <div id="logo">
+            <img src="Images/White Asterisk.gif" alt="OPIUM OPIUM">
+        </div>
+
+        <div id="centered-nav">
+            <div id="nav-elements">
+                <div>about</div>
+                <div>projects</div>
+                <div>music</div>
+                <div>contact</div>
+            </div>
+        </div>
+    </div>
+    
+    
 </body>
 </html>
