--- a/pumas-neocities-org/index.html
+++ b/pumas-neocities-org/index.html
@@ -15,10 +15,10 @@
 
         <div id="centered-nav">
             <div id="nav-elements">
-                <div>about</div>
-                <div>projects</div>
-                <div>music</div>
-                <div>contact</div>
+                <a href="about.html">about</a>
+                <a href="projects.html">projects</a>
+                <a href="music.html">music</a>
+                <a href="contact.html">contact</a>
             </div>
         </div>
     </div>
