--- a/pumas-neocities-org/projects.html
+++ b/pumas-neocities-org/projects.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Interests</title>
 </head>
 <body>
-    <h1>Projects</h1>
+    <h1>Interests</h1>
     <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="about-me.html">About me</a></li>
-        <li><a href="interests.html">Interests</a></li>
-        <li>Projects</li>
+        <li>Interests</li>
+        <li><a href="projects.html">Projects</a></li>
     </ul>
 </body>
 </html>
