--- a/index.html
+++ b/index.html
@@ -4,20 +4,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Styles/style.css">
+    <script src="https://kit.fontawesome.com/5fcfba3292.js" crossorigin="anonymous"></script>
     <title>Porfolio</title>
 </head>
 <body>
     <div id="main">
-        <h1>Hi, I'm Pumas! 👋</h1>
+        <div id="titlebar">
+            <h1>Hi, I'm Pumas! 👋</h1>
+            
+            <div id="mini-bar">
+                <ul id="horizontal-list">
+                    <li class="hvr-float"><a href="https://github.com/TSOT7" target="_blank"><i class="fa-brands fa-square-github fa-2xl"></i></a></li>
+                    <li class="hvr-float"><a href="https://www.linkedin.com/in/thomas-siu/" target="_blank"><i class="fa-brands fa-linkedin fa-2xl"></i></a></li>
+                    <li class="hvr-float"><a href="projects.html"><i class="fa-regular fa-folder fa-2xl"></i></a></li>
+                    <li class="hvr-float"><a href="about.html" target="_blank"><i class="fa-regular fa-user fa-2xl"></i></a></li>
+                </ul>
+            </div>
+        </div>
+        
         <div id="dashed-line"></div>
-        <p>I'm a CS student at UMB</p>
-        <p>Please check out my links</p>
-        <div id="mini-bar">
-            <ul id="horizontal-list">
-                <li><a href="https://github.com/TSOT7" target="_blank">Github</a></li>
-                <li><a href="">Projects</a></li>
-                <li><a href="https://www.linkedin.com/in/thomas-siu/" target="_blank">LinkedIn</a></li>
-            </ul>
+
+        <div id="body">
+            <div id="img">
+                <img src="Images/sky.jpeg" height="300px" width="500px" alt="">
+            </div>
+            <div id="text-paragraph">
+                <p>Greetings internet, welcome to my Neocities page. There is nothing much here at the moment but this page will grow alongside my progress</p>
+                <p>I'm currently a CS student at UMB</p>
+                <p>Please check out my links in the bar above</p>
+            </div>
         </div>
     </div>
 </body>
