--- a/index.html
+++ b/index.html
@@ -3,37 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="Styles/style.css">
-    <script src="https://kit.fontawesome.com/5fcfba3292.js" crossorigin="anonymous"></script>
-    <title>Home</title>
+    <link rel="stylesheet" href="Styles/indexstyle.css">
+    <title>Welcome...</title>
 </head>
-<body class="crt">
-    <div id="ascii">
-        <h1>
-            <pre>
-                ██████╗ ██╗   ██╗███╗   ███╗ █████╗ ███████╗    ██╗      █████╗ ██╗██████╗ 
-                ██╔══██╗██║   ██║████╗ ████║██╔══██╗██╔════╝    ██║     ██╔══██╗██║██╔══██╗
-                ██████╔╝██║   ██║██╔████╔██║███████║███████╗    ██║     ███████║██║██████╔╝
-                ██╔═══╝ ██║   ██║██║╚██╔╝██║██╔══██║╚════██║    ██║     ██╔══██║██║██╔══██╗
-                ██║     ╚██████╔╝██║ ╚═╝ ██║██║  ██║███████║    ███████╗██║  ██║██║██║  ██║
-                ╚═╝      ╚═════╝ ╚═╝     ╚═╝╚═╝  ╚═╝╚══════╝    ╚══════╝╚═╝  ╚═╝╚═╝╚═╝  ╚═╝                                                    
-            </pre>
-        </h1>
-    </div>
-
-    <div id="bar">
-        <ul>
-            <li><a href="">home</a></li>
-            <li><a href="">about me</a></li>
-            <li><a href="">interests</a></li>
-            <li><a href="">projects</a></li>
-            <li><a href="">heavensent</a></li>
-        </ul>
-    </div>
-
-    <div id="main">
-        <img src="/Images/knuckles.gif" alt="">
-        <h2>Like an angel from the underworld. Or a devil from Paradise.</h2>
-    </div>
+<body>
+    <div class="box">
+        <div></div>
+      </div>
 </body>
 </html>
