--- a/index.html
+++ b/index.html
@@ -3,9 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Pumas Lair</title>
 </head>
 <body>
-    hello world
+    <div class="header">
+            <div id="logo">P</div>
+            <div class="navbar">
+                <ul id="menu-elements">
+                    <li><a href="">about</a></li>
+                    <li><a href="">interests</a></li>
+                    <li><a href="index.html">home</a></li>
+                </ul>
+            </div>
+    </div>
+
+    <div id="ascii">
+        <pre>
+            ██████╗ ██╗   ██╗███╗   ███╗ █████╗ ███████╗    ██╗      █████╗ ██╗██████╗ 
+            ██╔══██╗██║   ██║████╗ ████║██╔══██╗██╔════╝    ██║     ██╔══██╗██║██╔══██╗
+            ██████╔╝██║   ██║██╔████╔██║███████║███████╗    ██║     ███████║██║██████╔╝
+            ██╔═══╝ ██║   ██║██║╚██╔╝██║██╔══██║╚════██║    ██║     ██╔══██║██║██╔══██╗
+            ██║     ╚██████╔╝██║ ╚═╝ ██║██║  ██║███████║    ███████╗██║  ██║██║██║  ██║
+            ╚═╝      ╚═════╝ ╚═╝     ╚═╝╚═╝  ╚═╝╚══════╝    ╚══════╝╚═╝  ╚═╝╚═╝╚═╝  ╚═╝                                                    
+        </pre>
+    </div>
+
+    <div> Welcome to my Neocities Page! I'm currently a student at UMB studying CS. 
+        I created this website as a means of escaping the evergrowing distractions of social media and create my own corner of the internet.
+    </div>
+
+    <div>
+        <footer>
+            Created by Pumas
+        </footer>
+    </div>
 </body>
 </html>
