--- a/index.html
+++ b/index.html
@@ -29,9 +29,13 @@
         </pre>
     </div>
 
-    <div> Welcome to my Neocities Page! I'm currently a student at UMB studying CS. 
-        I created this website as a means of escaping the evergrowing distractions of social media and create my own corner of the internet.
-    </div>
+    <div class="parent">
+        <div class="div1">Hello World!</div>
+        <div class="div2">You are the __ Visitor </div>
+        <div class="div3">Welcome to my Neocities Page! I'm currently a student at UMB studying CS. 
+            I created this website as a means of escaping the evergrowing distractions of social media and create my own corner of the internet.  </div>
+    </div> 
+
 
     <div>
         <footer>
