Padding and gaps to grid

--- a/index.html
+++ b/index.html
@@ -8,7 +8,18 @@
 </head>
 <body>
     <div class="header">
-            <div id="logo">P</div>
+            <div id="logo">
+                <div id="ascii">
+                <pre>
+                    ██████╗ ██╗   ██╗███╗   ███╗ █████╗ ███████╗    ██╗      █████╗ ██╗██████╗ 
+                    ██╔══██╗██║   ██║████╗ ████║██╔══██╗██╔════╝    ██║     ██╔══██╗██║██╔══██╗
+                    ██████╔╝██║   ██║██╔████╔██║███████║███████╗    ██║     ███████║██║██████╔╝
+                    ██╔═══╝ ██║   ██║██║╚██╔╝██║██╔══██║╚════██║    ██║     ██╔══██║██║██╔══██╗
+                    ██║     ╚██████╔╝██║ ╚═╝ ██║██║  ██║███████║    ███████╗██║  ██║██║██║  ██║
+                    ╚═╝      ╚═════╝ ╚═╝     ╚═╝╚═╝  ╚═╝╚══════╝    ╚══════╝╚═╝  ╚═╝╚═╝╚═╝  ╚═╝                                                    
+                </pre>
+                </div>
+            </div>
             <div class="navbar">
                 <ul id="menu-elements">
                     <li><a href="">about</a></li>
@@ -18,16 +29,7 @@
             </div>
     </div>
 
-    <div id="ascii">
-        <pre>
-            ██████╗ ██╗   ██╗███╗   ███╗ █████╗ ███████╗    ██╗      █████╗ ██╗██████╗ 
-            ██╔══██╗██║   ██║████╗ ████║██╔══██╗██╔════╝    ██║     ██╔══██╗██║██╔══██╗
-            ██████╔╝██║   ██║██╔████╔██║███████║███████╗    ██║     ███████║██║██████╔╝
-            ██╔═══╝ ██║   ██║██║╚██╔╝██║██╔══██║╚════██║    ██║     ██╔══██║██║██╔══██╗
-            ██║     ╚██████╔╝██║ ╚═╝ ██║██║  ██║███████║    ███████╗██║  ██║██║██║  ██║
-            ╚═╝      ╚═════╝ ╚═╝     ╚═╝╚═╝  ╚═╝╚══════╝    ╚══════╝╚═╝  ╚═╝╚═╝╚═╝  ╚═╝                                                    
-        </pre>
-    </div>
+    
 
     <div class="parent">
         <div class="div1">Hello World!</div>
