--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
     <div>
         <footer>
             Created by Pumas
+            <a href="https://websetsbylynn.neocities.org/" target="_blank"><img src="https://i.postimg.cc/HLdZrFqS/websetsbylynn88x31.jpg" alt="" style="width:88px;height:31px;border:0"></a>
         </footer>
     </div>
 </body>
