--- a/index.html
+++ b/index.html
@@ -28,22 +28,21 @@
                 </ul>
             </div>
     </div>
-
+    <div class="container">
+        <div class="parent">
+            <div class="div1">Hello World!</div>
+            <div class="div2">You are the __ Visitor </div>
+            <div class="div3">Welcome to my Neocities Page! I'm currently a student at UMB studying CS. 
+                I created this website as a means of escaping the evergrowing distractions of social media and create my own corner of the internet.  </div>
+        </div> 
     
-
-    <div class="parent">
-        <div class="div1">Hello World!</div>
-        <div class="div2">You are the __ Visitor </div>
-        <div class="div3">Welcome to my Neocities Page! I'm currently a student at UMB studying CS. 
-            I created this website as a means of escaping the evergrowing distractions of social media and create my own corner of the internet.  </div>
-    </div> 
-
-
-    <div>
-        <footer>
-            Created by Pumas
-            <a href="https://websetsbylynn.neocities.org/" target="_blank"><img src="https://i.postimg.cc/HLdZrFqS/websetsbylynn88x31.jpg" alt="" style="width:88px;height:31px;border:0"></a>
-        </footer>
+    
+        <div>
+            <footer>
+                Created by Pumas
+                <a href="https://websetsbylynn.neocities.org/" target="_blank"><img src="https://i.postimg.cc/HLdZrFqS/websetsbylynn88x31.jpg" alt="" style="width:88px;height:31px;border:0"></a>
+            </footer>
+        </div>
     </div>
 </body>
 </html>
