--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
                     <li><a href="">about</a></li>
                     <li><a href="">interests</a></li>
                     <li><a href="index.html">home</a></li>
+                    <li><a href="links.html">links</a></li>
                 </ul>
             </div>
     </div>
@@ -44,9 +45,12 @@
         </div> 
     </div>
     <div>
+        <div>
+            <a href="https://websetsbylynn.neocities.org/" target="_blank"><img src="https://i.postimg.cc/HLdZrFqS/websetsbylynn88x31.jpg" alt="" style="width:88px;height:31px;border:0"></a>
+            <img src="/images/a3.gif" alt="">
+        </div>
         <footer>
             Created by Pumas
-            <a href="https://websetsbylynn.neocities.org/" target="_blank"><img src="https://i.postimg.cc/HLdZrFqS/websetsbylynn88x31.jpg" alt="" style="width:88px;height:31px;border:0"></a>
         </footer>
     </div>
 </body>
