--- a/links.html
+++ b/links.html
@@ -6,10 +6,16 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Credits</h1>
+    <h1>Import Links</h1>
+    <h2>Credits</h2>
     <ul>
-        <li><a href="https://www.dafont.com/">dafont.com</a></li>
-        <li><a href="https://adriansblinkiecollection.neocities.org/">adriansblinkiecollection.neocities.org</a></li>
+        <li><a href="https://www.dafont.com/" target="_blank">dafont.com</a></li>
+        <li><a href="https://adriansblinkiecollection.neocities.org/" target="_blank">adriansblinkiecollection.neocities.org</a></li>
+        <li><a href="https://decohoard.carrd.co/" target="_blank">decohoard</a></li>
+    </ul>
+    <h2>User Links</h2>
+    <ul>
+        <li><a href="https://www.last.fm/user/pumas_" target="_blank">last.fm</a></li>
     </ul>
 </body>
 </html>
