Favicon for index.html

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="animations.css">
+    <link rel="icon" type="image/x-icon" href="/images/static tv.gif">
     <title>Pumas Lair</title>
 </head>
 <body>
@@ -32,9 +33,10 @@
             </div>
     </div>
     </div>
-    
-    <div class="rotating-box">
-        Welcome to my webpage!
+    <div class="box-parent">
+        <div class="rotating-box">
+            Welcome to my webpage!
+        </div>
     </div>
     <div class="container">
         <div class="parent">
