All main elements centered

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
                 <ul id="menu-elements">
                     <li><a href="">about</a></li>
                     <li><a href="">interests</a></li>
-                    <li><a href="index.html">home</a></li>
                     <li><a href="links.html">links</a></li>
+                    <li><a href="index.html">home</a></li>
                 </ul>
             </div>
     </div>
@@ -40,13 +40,18 @@
     </div>
     <div class="container">
         <div class="parent">
-            <div class="div1">Hello World!</div>
+            <div class="div1">
+                <h3>Checklist:</h3>
+                <ul>
+                    <li> Visitor count</li>
+                </ul>
+            </div>
             <div class="div2">You are the __ Visitor </div>
             <div class="div3">Welcome to my Neocities Page! I'm currently a student at UMB studying CS. 
                 I created this website as a means of escaping the evergrowing distractions of social media and create my own corner of the internet.  </div>
         </div> 
     </div>
-    <div>
+    <div class="ending">
         <div>
             <a href="https://websetsbylynn.neocities.org/" target="_blank"><img src="https://i.postimg.cc/HLdZrFqS/websetsbylynn88x31.jpg" alt="" style="width:88px;height:31px;border:0"></a>
             <img src="/images/a3.gif" alt="">
