Changed floating message

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </div>
     <div class="box-parent">
         <div class="rotating-box">
-            Welcome to my webpage!
+            Site under construction!
         </div>
     </div>
     <div class="container">
